2012-07-20  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* tst-pthread-getattr.c (MAX_STACK_SIZE): New max cap for stack
	size.
	(_MIN): New macro.
	(allocate_and_test): Return STACKADDR.  Access STACKADDR instead
	of MEM to test.
	(check_stack_top): Read valued written into STACKADDR in
	allocate_and_test.  Cap stack size to MAX_STACK_SIZE.

2012-07-19  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* nptl-init.c (sighandler_setxid): Fix the comment that
	describes it.

2012-06-23  Thomas Schwinge  <thomas@codesourcery.com>

	* sysdeps/unix/sysv/linux/sh/lowlevelrobustlock.S
	(__lll_robust_timedlock_wait): Simplify CFI directives.

2012-06-20  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #12416]
	* Makefile (tests): Add test case.
	* pthread_getattr_np.c (pthread_getattr_np): Deduct pages below
	the __libc_stack_end page from stacksize.  Truncate stacksize to
	make it page aligned when it is computed from RLIMIT_STACK.
	* tst-pthread-getattr.c: New test case. Verify that stackaddr is
	accessible.

2012-06-07  Carlos Sánchez de La Lama  <csanchezdll@gmail.com>

	[BZ #14205]
	* sysdeps/sparc/sparc32/pthread_spin_lock.S: Do not use v9
	branches.

2012-06-04  Siddhesh Poyarekar  <siddhesh@redhat.com>
	    Jakub Jelinek  <jakub@redhat.com>

	[BZ #14188]
	* sysdeps/pthread/pthread.h
	[!(defined __GNUC__ && defined __EXCEPTIONS)]
	(pthread_cleanup_push, pthread_cleanup_push_defer_np): Use
	__libc_unlikely instead of __builtin_expect.

2012-05-30  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14117]
	* sysdeps/unix/sysv/linux/i386/bits/pthreadtypes.h: Removed.
	* sysdeps/unix/sysv/linux/i386/bits/semaphore.h: Likewise.
	* sysdeps/unix/sysv/linux/i386/Implies: New file.
	* sysdeps/unix/sysv/linux/x86_64/Implies: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/pthreadtypes.h: Renamed
	to ...
	* sysdeps/unix/sysv/linux/x86/bits/pthreadtypes.h: This.
	* sysdeps/unix/sysv/linux/x86_64/bits/semaphore.h: Renamed
	to ...
	* sysdeps/unix/sysv/linux/x86/bits/semaphore.h: This.
